tests/snapshots/execution_spec__test-js-request-reponse.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @link(src: "test.js", type: Script) {
  query: Query
}

type Query {
  hello: String @http(baseURL: "http://localhost:3000", path: "/hello")
  hi: String @http(baseURL: "http://localhost:3000", path: "/hi")
}
