tests/snapshots/execution_spec__test-lack-resolver.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "No resolver has been found in the schema",
    "trace": [
      "Query",
      "posts"
    ],
    "description": null
  }
]
