tests/snapshots/execution_spec__test-merge-nested.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Foo {
  """
  test2
  """
  a: String
}

type Query {
  hi: Foo
}

schema {
  query: Query
}
