tests/snapshots/execution_spec__test-merge-nested.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(baseURL: "http://abc.com") {
  query: Query
}

type Foo {
  """
  test2
  """
  a: String
  """
  test1
  """
  b: String
}

type Query {
  hi: Foo @expr(body: {a: "world"})
}
