tests/snapshots/execution_spec__test-merge-right-with-link-config.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

type Foo {
  bar: String
}

scalar JSON

scalar PhoneNumber

type Query {
  foo: Foo
}

scalar Url

schema {
  query: Query
}
