tests/snapshots/execution_spec__test-merge-right-with-link-config.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(allowedHeaders: ["Authorization"]) @link(src: "stripe-types.graphql", type: Config) {
  query: Query
}

type Query {
  foo: Foo
}
