tests/snapshots/execution_spec__test-merge-server-sdl.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  foo: [User]
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
