tests/snapshots/execution_spec__test-merge-union.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(baseURL: "http://jsonplacheholder.typicode.com") {
  query: Query
}

union FooBar = Bar | Baz | Foo

type Bar {
  bar: String
}

type Baz {
  baz: String
}

type Foo {
  a: String
  foo: String
}

type Query {
  foo: FooBar @http(path: "/foo")
}
