tests/snapshots/execution_spec__test-missing-root-types.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Mutation type is not defined",
    "trace": [
      "MutationDef"
    ],
    "description": null
  },
  {
    "message": "Query type is not defined",
    "trace": [
      "QueryType"
    ],
    "description": null
  }
]
